fix: Address code review security findings
- Externalize sensitive configs with env variables (JWT secret, DB password, admin credentials)
- Restrict CORS to configured origins instead of wildcard
- Add HTML escaping (escapeHtml) to prevent XSS in admin dashboard
- Add error handling for non-JSON API responses
- Extract HTTP timeout constants in AdminApiClient
- Add date parsing validation in ban endpoint

Agent-Logs-Url: https://github.com/mansdeanna2-collab/Teleg/sessions/3415a6e2-5066-455c-afad-d317adff421d

Co-authored-by: mansdeanna2-collab <232804216+mansdeanna2-collab@users.noreply.github.com>